# CppBase

./: .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt
.github/: CODE_OF_CONDUCT.md  dependabot.yml
.github/workflows/: Build.yml  CodeCoverage.yml  CoverityScan.yml  StaticAnalysis.yml  StyleCheck.yml  codeql-analysis.yml
docs/: CMakeLists.txt
include/cpp/: AnonymousName.hpp  Assume.hpp  Bit.hpp  BreakIntoDebugger.hpp  Compiler.hpp  Config.hpp  Constexpr.hpp  CurrentFunction.hpp  Debug.hpp  FunctionLikeMacro.hpp  Glue.hpp  Implicit.hpp  Inline.hpp  Likely.hpp  NonCopyable.hpp  NonMoveable.hpp  OS.hpp  SourceLine.hpp  StreamScopeGuard.hpp  Stringify.hpp  Version.hpp  Versioning.hpp  Warning.hpp
test/: CMakeLists.txt
test/include/: doctest.h
test/src/: AnonymousName.test.cpp  Assume.test.cpp  Bit.test.cpp  BreakIntoDebugger.test.cpp  Compiler.test.cpp  Config.test.cpp  Constexpr.test.cpp  CurrentFunction.test.cpp  FunctionLikeMacro.test.cpp  Glue.test.cpp  Implicit.test.cpp  Inline.test.cpp  Likely.test.cpp  NonCopyable.test.cpp  NonMoveable.test.cpp  OS.test.cpp  SourceLine.test.cpp  StreamScopeGuard.test.cpp  Stringify.test.cpp  Version.test.cpp  Versioning.test.cpp  Warning.test.cpp
